--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cloud_firestore: ^3.3.0
   firebase_auth: ^3.4.2
   firebase_core: ^1.19.2
-
+  provider: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
